ec2.tf

resource "aws_instance" "web-1" {
 #   ami = var.imagename
    #ami = "ami-0d857ff0f5fc4e03b"
    #ami = "${data.aws_ami.my_ami.id}"
    availability_zone = "us-east-1a"
    instance_type = "t2.micro"
    key_name = "Key"
    user_data = "${file("userdata_install.sh")}"
    subnet_id = "aws_subnet.subnet-public.id"
    vpc_security_group_ids = "aws_security_group.allow_all.id"
    associate_public_ip_address = true	
    tags = {
        Name = "Server"
        Env = "Dev"
        Owner = "Sree"
	CostCenter = "ABCD"
    }
}
